Fix date parsing; Minor UX improvements

--- a/frontend-v2/res/styles/_colors.scss
+++ b/frontend-v2/res/styles/_colors.scss
@@ -16,5 +16,4 @@ $color-text-secondary: ncolor('black', 100, 0.54);
 $color-positive: ncolor('green', 50);
 $color-neutral: ncolor('gray', 60);
 $color-negative: ncolor('red', 50);
-
-$color-border: ncolor('black', 100, .075);
+$color-border: ncolor('gray', 10);
