--- a/frontend-v2/res/styles/ranking/_date-picker.scss
+++ b/frontend-v2/res/styles/ranking/_date-picker.scss
@@ -14,7 +14,6 @@
   background: $color-panel-bg;
   @include panel-shadow;
   padding: 0.6em;
-  border: 1px solid $color-border;
   @include animation(fade-in-right);
 
   .react-numeric-input {
@@ -24,7 +23,7 @@
     margin: 0 7px;
 
     b {
-      color: rgba($color-border, 0.15);
+      color: $color-border;
 
       i {
         font-size: 18px;
@@ -43,7 +42,7 @@
       order: 1;
 
       i:before {
-        @include icon(plus-box)
+        @include icon(plus)
       }
     }
     input {
@@ -59,7 +58,7 @@
       margin-top: 1px;
 
       i:before {
-        @include icon(minus-box)
+        @include icon(minus)
       }
     }
   }
@@ -81,7 +80,7 @@
       i {
         font-size: 18px;
         cursor: pointer;
-        color: rgba($color-border, 0.15);
+        color: $color-border;
         transition-duration: $base-transition-duration;
 
         &:hover {
