Add ranking excerpt to team view

--- a/frontend-v2/res/styles/_colors.scss
+++ b/frontend-v2/res/styles/_colors.scss
@@ -17,3 +17,4 @@ $color-positive: ncolor('green', 50);
 $color-neutral: ncolor('gray', 60);
 $color-negative: ncolor('red', 50);
 $color-border: ncolor('gray', 10);
+$color-highlight: ncolor('cerulean', 1);
