--- a/frontend-v2/res/styles/_mixins.scss
+++ b/frontend-v2/res/styles/_mixins.scss
@@ -1,7 +1,3 @@
-@mixin panel-shadow {
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
-}
-
 @mixin font-regular {
   font-weight: 400;
 }
@@ -30,4 +26,21 @@
 
 @mixin error-outline {
   outline: 2px solid $color-negative;
+}
+
+@mixin panel-shadow {
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
+}
+
+@mixin panel {
+  @include panel-shadow;
+  @include animation(fade-in-bottom);
+  padding: 0.8em 1em;
+  background: $color-panel-bg;
+
+  &__header {
+    font-weight: bold;
+    font-size: 115%;
+    margin-bottom: 1rem;
+  }
 }
