--- a/frontend-v2/res/styles/results/_results.scss
+++ b/frontend-v2/res/styles/results/_results.scss
@@ -104,6 +104,7 @@
   @include font-medium;
   display: flex;
   flex: 1 0 0;
+  align-items: center;
 
   &--left {
     flex-direction: row-reverse;
